# agent-doc-cli

./: .gitignore  claude-code-file-conversion-analysis.md  code-edit-analysis.md  grep-tool-analysis.md  test_upload.md
agent-doc-cli/: Makefile  pyproject.toml  server.py  test_upload_logic.py
agent-doc-cli/app/: agent.py
agent-doc-cli/app/tools/: document_tools.py
agent-doc-cli/frontend/: index.html  script.js  style.css
agent-doc-cli/workspace/: Gmail - Conferma dell'ordine #E20417414.md  einstein_formula.md  einstein_formula.tex  giulio_salierno_performance_review.txt  notes.md
